Add cursor pointer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="header_form">
                     <span class="form_text">REQUEST A QUOTE</span>
-                    <form action="https://fom.in.ua/echo" method="post" id="form" class="form_quote">
+                    <form action="" method="post" id="form" class="form_quote">
                         <div class="form_input">
                             <input type="text" form="form" name="name" placeholder="Full Name" class="user">
                         </div>
